PostGIS 3.3.7
xxxx/xx/xx

* Bug Fixes and Enhancements *

 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5671, Bug in ST_Area function with use_spheroid=false
          (Paul Ramsey, Regina Obe)


PostGIS 3.3.6
2024/02/07

This version requires PostgreSQL 11-16, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
(and ST_MakeValid enhancements with 3.10+), Proj 6.1+,
and PostgreSQL 15+.

* Bug Fixes and Enhancements *

 - #5633, Fix postgis load, upgrade and usage with standard_conforming_strings
          set to off (Sandro Santilli, Regina Obe)
 - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)